--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "mister",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bshimrit.github.io/Mister8BitCoin/",
   "dependencies": {
     "axios": "^0.18.0",
+    "gh-pages": "^1.2.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
@@ -16,6 +18,8 @@
     "uniqid": "^4.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
